--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -9,11 +9,15 @@
     }
 
     > * {
+        margin-left: 20px;
+    }
+
+    > * {
         font-size: 1rem;
     }
 
     > * {
-        color: $primary-color;
+        color: white;
     }
     
     h1 {
@@ -27,7 +31,7 @@
     }
 
     a {
-    color: inherit$primary-color;
+    color: inherit $primary-color;
     text-decoration: none;
     }
 
@@ -43,5 +47,11 @@
     
     a:hover {
     text-decoration: underline;
+    }
+
+    ul {
+    margin-left: 40px;
+    list-style: disc;
+    display: inline-block;
     }
   }
